# polyclaw-cipher-live-review

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW_RESULT.md  Dockerfile  HANDOFF_AUTOCRAW.md  README.md  docker-compose.live.yaml  docker-compose.yml  konteks.md  pyproject.toml  temp_check.py
config/: default.yaml  fifteen.yaml  live.yaml  nova.yaml  paper.yaml  scalper.yaml
docs/analysis/: RECOMMENDATIONS_v2.md  V31_ANALYSIS.md  V3_ANALYSIS.md  V3_REVISED_TARGET.md
docs/reviews/: AUDIT_ARENA_v3.4.3.md  AUDIT_KIMI_v3.4.3.md  DIAGNOSIS_STAGNANT_0900UTC.md  PROMPT_FOR_AI_REVIEW.md  REVIEW_CLAUDE_v3.2.0.md  REVIEW_DISCUSSION_ROUND1.md  REVIEW_DISCUSSION_ROUND2_FINAL.md  REVIEW_GROK_v3.2.0.md  REVIEW_LISA_v3.2.0.md  SUMMARY_FOR_AI_REVIEW.md  SUMMARY_V3_REVIEW_DISCUSSION.md  recommendation-daemon.md  recommendation-dashboard.md
scripts/: analyze_trades.py  archive_trades.py  check_portfolio.py  daemon.py  master_archive.py  merge_archives.py  tg_bot.py  tg_live_bot.py
src/polyclaw_cipher_v3/: __init__.py  __main__.py  bot.py  config.py
src/polyclaw_cipher_v3/agent/: llm_client.py
src/polyclaw_cipher_v3/alerts/: __init__.py  telegram.py
src/polyclaw_cipher_v3/core/: binance_ws.py  clob_ws.py  event_bus.py  http_server.py  polygon_rpc.py  resolution.py  scanner.py  types.py
src/polyclaw_cipher_v3/execution/: __init__.py  base.py  live.py  paper.py  reconcile.py
src/polyclaw_cipher_v3/observability/: logs.py
src/polyclaw_cipher_v3/risk/: manager.py  sizer.py  tier_manager.py
tests/: test_bot_logic.py
(+11 files in other folders)
